--- a/templates/layouts/partials/_footer.html.twig
+++ b/templates/layouts/partials/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer>
-    <h3>Projet d'étude codé en SYMFONY</h3>
-    <p>Ce projet à été codé par Baptiste, Hélene et Steven</p>
+<footer class="mt-5 p-5">
+    <h3 class="text-center">Projet d'étude codé en SYMFONY</h3>
+    <p  class="text-center">Ce projet à été codé par Baptiste, Hélene et Steven</p>
 </footer>
