--- a/templates/layouts/partials/_footer.html.twig
+++ b/templates/layouts/partials/_footer.html.twig
@@ -1,4 +1,4 @@
 <footer class="mt-5 p-5">
     <h3 class="text-center">Projet d'étude codé en SYMFONY</h3>
-    <p  class="text-center">Ce projet à été codé par Baptiste, Hélene et Steven</p>
+    <p  class="text-center">Ce projet à été codé par Baptiste, Hélène et Steven</p>
 </footer>
