--- a/templates/layouts/partials/_header.html.twig
+++ b/templates/layouts/partials/_header.html.twig
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Nos produits</a>
+                <a class="nav-link" href="#">Nos produits</a>symfony serve-d
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Notre entreprise</a>
