--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,17 +1,21 @@
 @import "~bootstrap/scss/bootstrap";
 
-
 main {
-  height: 350px;
+  position: relative;
 }
 
 footer {
-  background-color: #DDDDDD;
   position: absolute;
   bottom: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  height: 100px;
+  div {
+    text-align: center;
+    span {
+      color: #DDDDDD;
+      font-size: 20px;
+      font-weight: bold;
+    }
+  }
 }
-
-
 
