--- a/templates/layouts/partials/_header.html.twig
+++ b/templates/layouts/partials/_header.html.twig
@@ -1,4 +1,4 @@
-<header class="mt-3 mb-3">
+<header class="d-flex mt-3 mb-3">
     <a href="{{ path('app_home') }}"><img src="{{ asset('build/img/logo.jpg') }}" alt="logo de Promer"></a>
     <h3 class="ml-5 mt-5">Nous vous promettons d'être les meilleurs</h3>
 </header>
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Nos produits</a>symfony serve-d
+                <a class="nav-link" href="#">Nos produits</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Notre entreprise</a>
