--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -10,10 +10,9 @@
     <body>
 
         {{ include('layouts/partials/_header.html.twig') }}
-        <main role="main" class="mt-5">
+        <main role="main" class="container mt-5">
             {% block body %}{% endblock %}
         </main>
-        {{ include('layouts/partials/_footer.html.twig') }}
         {% block javascripts %}
             {{encore_entry_script_tags('app')}}
         {% endblock %}
