--- a/templates/layouts/partials/_header.html.twig
+++ b/templates/layouts/partials/_header.html.twig
@@ -1,6 +1,6 @@
 <header class="d-flex mt-3 mb-3">
-    <a href="{{ path('app_home') }}"><img src="{{ asset('build/img/logo.jpg') }}" alt="logo de Promer"></a>
-    <h3 class="ml-5 mt-5">Nous vous promettons d'être les meilleurs</h3>
+    <a class="ml-3 mt-1" href="{{ path('app_home') }}"><img src="{{ asset('build/img/logo.jpg') }}" alt="logo de Promer" height="40"></a>
+    <h4 class="mx-auto mt-3"><i>« Nous vous promettons d'être les meilleurs ! »</i></h4>
 </header>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,6 +13,13 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Notre entreprise</a>
+            </li>
+        </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarsExample04">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
             </li>
         </ul>
     </div>
