--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Se connecter{% endblock %}
 
 {% block body %}
 <form method="post">
@@ -10,15 +10,23 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+    <h2 class="text-center mb-3">Connectez-vous !</h2>
+    <div class="form-group row">
+        <label for="inputEmail" class="mt-1">Adresse email</label>
+        <div class="col-sm-10">
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="inputPassword" class="mt-1">Mot de passe</label>
+        <div class="col-sm-10">
+            <input type="password" name="password" id="inputPassword" class="form-control" required>
+        </div>
+    </div>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
@@ -34,9 +42,11 @@
             </label>
         </div>
     #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+    <br />
+    <button class="btn btn-primary" type="submit">
+        Se connecter
     </button>
 </form>
+<br />
+<a><i>Pas de compte ? Cliquez </a><a href="{{ path('app_signup') }}"><b>ici</b></a><a> pour vous inscrire !</i></a>
 {% endblock %}
