--- a/templates/layouts/partials/_header.html.twig
+++ b/templates/layouts/partials/_header.html.twig
@@ -18,9 +18,18 @@
     </div>
     <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav ml-auto">
+            {% if app.user  %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_compte') }}">Mon compte</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_logout') }}">Déconnxion</a>
+            </li>
+            {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
             </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
