Traduction réinitialisation mot de passe

--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,8 +1,10 @@
 {% extends 'layouts/base.html.twig' %}
 
-{% block title %}Password Reset Email Sent{% endblock %}
+{% block title %}Mail de réinitialisation envoyé !{% endblock %}
 
 {% block body %}
-    <p>An email has been sent that contains a link that you can click to reset your password. This link will expire in {{ tokenLifetime|date('g') }} hour(s).</p>
-    <p>If you don't receive an email please check your spam folder or <a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+    <h2 class="text-center mb-3">Mail de réinitialisation envoyé !</h2>
+
+    <p>Un email contenant un lien permettant de réinitialiser votre mot de passe vous a été envoyé. Ce lien expirera dans {{ tokenLifetime|date('g') }} heure(s).</p>
+    <p>Si vous ne recevez pas cet email, veuillez vérifier dans votre dossier de courriers indésirables ou <a href="{{ path('app_forgot_password_request') }}">essayez à nouveau</a>.</p>
 {% endblock %}
