--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,24 @@
 {% extends 'layouts/base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Réinitialiser le mot de passe{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <h2 class="text-center mb-3">Réinitialiser votre mot de passe</h2>
 
     {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
         <div>
-            <small>
-                Enter your email address and we we will send you a
-                link to reset your password.
-            </small>
+            <small><i>
+                Entrez votre adresse email et nous vous enverons un lien
+                qui vous permettra de réinitialiser votre mot de passe.
+            </i></small>
         </div>
+        
+        <br />
 
-        <button class="btn btn-primary">Send password reset email</button>
+        <button class="btn btn-primary">Envoyer un mail pour réinitialiser votre mot de passe</button>
     {{ form_end(requestForm) }}
 {% endblock %}
