--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -5,5 +5,6 @@
         <div class="col-md-6 mx-auto">
             <h1>Bienvenue {{ app.user.nom }}</h1>
         </div>
+        <a href="{{ path('app_modifications') }}">Mettre à jour les informations du compte</a>
     </div>
 {% endblock %}
