--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'layouts/base.html.twig' %}
 
-{% block title %}Hello ArticlesController!{% endblock %}
+{% block title %}Nos produits{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/CAI/annee_1/NFE102/symfony_project/Promer/src/Controller/ArticlesController.php'|file_link(0) }}">src/Controller/ArticlesController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/CAI/annee_1/NFE102/symfony_project/Promer/templates/articles/index.html.twig'|file_link(0) }}">templates/articles/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <h1>Nos produits</h1>
+    <div class="row">
+        {% for product in products %}
+            <div class="col-md-4">
+                <div class="product-item text-center">
+                    <a href="{{ path('app_show', {'slug': product.slug}) }}"><img src="/uploads/{{ product.imageProduit }}" alt="{{ product.nom }}" height="10px" class="img-fluid"></a>
+                    <h5 style="text-transform: uppercase; margin-bottom: 1px; font-size: 15px">{{ product.nom }}</h5>
+                    <span style="display: block; margin-bottom: 1px; font-size: 13px" class="product_description">{{ product.description|u.truncate(50,'...') }}</span>
+                    <span style="font-weight: bold" class="product_price">{{ (product.prixColis /100)|number_format(2)}} €</span>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
+
