--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -8,10 +8,11 @@
         {% for product in products %}
             <div class="col-md-4">
                 <div class="product-item text-center">
-                    <a href="{{ path('app_show', {'slug': product.slug}) }}"><img src="/uploads/{{ product.imageProduit }}" alt="{{ product.nom }}" height="10px" class="img-fluid"></a>
-                    <h5 style="text-transform: uppercase; margin-bottom: 1px; font-size: 15px">{{ product.nom }}</h5>
-                    <span style="display: block; margin-bottom: 1px; font-size: 13px" class="product_description">{{ product.description|u.truncate(50,'...') }}</span>
-                    <span style="font-weight: bold" class="product_price">{{ (product.prixColis /100)|number_format(2)}} €</span>
+                    <a href="{{ path('app_show', {'slug': product.slug}) }}">
+                        <img src="/uploads/{{ product.imageProduit }}" alt="{{ product.nom }}" height="10px" class="img-fluid">
+                        <h5 style="text-transform: uppercase; margin-bottom: 1px; font-size: 15px">{{ product.nom }}</h5>
+                        <span style="display: block; margin-bottom: 1px; font-size: 13px" class="product_description">{{ product.description|u.truncate(50,'...') }}</span>
+                    </a>
                 </div>
             </div>
         {% endfor %}
