--- a/templates/layouts/partials/_header.html.twig
+++ b/templates/layouts/partials/_header.html.twig
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="{{ path('app_compte') }}">Mon compte</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_logout') }}">Déconnxion</a>
+                <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
             </li>
             {% else %}
             <li class="nav-item">
