--- a/templates/layouts/partials/_header.html.twig
+++ b/templates/layouts/partials/_header.html.twig
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="{{ path('app_produits') }}">Nos produits</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Notre entreprise</a>
+                <a class="nav-link" href="{{ path('info_entreprise') }}">Notre entreprise</a>
             </li>
         </ul>
     </div>
