--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,20 +1,39 @@
-<!DOCTYPE html>
+{% extends 'layouts/base.html.twig' %}
 
-<title>Hello CartController!</title>
+{% block title %}Mon panier{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/CAI/annee_1/NFE102/symfony_project/Promer/src/Controller/CartController.php'|file_link(0) }}">src/Controller/CartController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/CAI/annee_1/NFE102/symfony_project/Promer/templates/cart/index.html.twig'|file_link(0) }}">templates/cart/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <h1>Mon panier</h1>
+    <p>Retrouver les produits que vous avez ajouté dans votre panier</p>
+    <table class="table mt-3">
+        <thead>
+        <tr>
+            <th scope="col">Produits</th>
+            <th scope="col">Quantité</th>
+            <th scope="col">Prix</th>
+            <th scope="col">Total</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% set total = null %}
+        {% for product in cart %}
+        <tr>
+            <th>
+                <img src="/uploads/{{ product.product.imageProduit }}" alt="{{ product.product.nom }}" height="80px">
+                {{ product.product.nom }}
+            </th>
+            <td>X{{ product.quantity }}</td>
+            <td>{{ (product.product.prixColis)/100|number_format(2) }} €</td>
+            <td>{{ (product.product.prixColis * product.quantity)/100|number_format(2) }} €</td>
+        </tr>
+            {% set total = total + (product.product.prixColis * product.quantity)%}
+        {% endfor %}
+        </tbody>
+    </table>
+    <hr>
+    <div class="text-right mb-5">
+        <b>Nombre de produit :</b> {{ cart|length }}<br>
+        <b>Total de mon panier : {{ total/100|number_format(2) }} €</b>
+        <a href="" class="btn btn-success btn-block">Valider mon panier</a>
+    </div>
 {% endblock %}
