--- a/templates/layouts/partials/_header.html.twig
+++ b/templates/layouts/partials/_header.html.twig
@@ -31,5 +31,7 @@
             </li>
             {% endif %}
         </ul>
+        <a href="{{ path('app_cart') }}"><img src="{{ asset('build/img/shopping-cart.png') }}" alt="mon panier"></a>
     </div>
 </nav>
+{%  %}
