--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <h1>Mon panier</h1>
+    {% if cart|length > 0 %}
     <p>Retrouver les produits que vous avez ajouté dans votre panier</p>
     <table class="table mt-3">
         <thead>
@@ -22,9 +23,18 @@
                 <img src="/uploads/{{ product.product.imageProduit }}" alt="{{ product.product.nom }}" height="80px">
                 {{ product.product.nom }}
             </th>
-            <td>X{{ product.quantity }}</td>
+            <td>
+                <a href="{{ path('decresse_my_product', {'id': product.product.id}) }}"><img src="{{ asset('build/img/moins.png') }}" alt="diminuer la quantité" height="20px"></a>
+                X{{ product.quantity }}
+                <a href="{{ path('add_to_cart', {'id': product.product.id}) }}"><img src="{{ asset('build/img/plus.png') }}" alt="ajouter une quantité" height="20px"></a>
+            </td>
             <td>{{ (product.product.prixColis)/100|number_format(2) }} €</td>
             <td>{{ (product.product.prixColis * product.quantity)/100|number_format(2) }} €</td>
+            <td>
+                <a href="{{ path('delete_my_product', {'id': product.product.id}) }}">
+                    <img src="{{ asset('build/img/delete.png') }}" alt="supprimer le produit" height="30px">
+                </a>
+            </td>
         </tr>
             {% set total = total + (product.product.prixColis * product.quantity)%}
         {% endfor %}
@@ -34,6 +44,9 @@
     <div class="text-right mb-5">
         <b>Nombre de produit :</b> {{ cart|length }}<br>
         <b>Total de mon panier : {{ total/100|number_format(2) }} €</b>
-        <a href="" class="btn btn-success btn-block">Valider mon panier</a>
+        <a href="" class="btn btn-success btn-block mt-3">Valider mon panier</a>
     </div>
+    {% else %}
+    <b>Votre panier est vide</b>
+    {% endif %}
 {% endblock %}
