--- a/templates/account/adresse.html.twig
+++ b/templates/account/adresse.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html.twig' %}
 
+{% block title %}Mes adresses de livraison{% endblock %}
+
 {% block body %}
-    <h1>Mon compte</h1>
-    <p>Bonjour {{ app.user.firstname }}</p>
 {% endblock %}
