--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -2,5 +2,5 @@
 
 {% block body %}
     <h1>Mon compte</h1>
-    <p>Bonjour {{ app.user.firstname }}</p>
+    <p>Bonjour {{ app.user.nom }}</p>
 {% endblock %}
