--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -2,5 +2,9 @@
 
 {% block body %}
     <h1>Mon compte</h1>
-    <p>Bonjour {{ app.user.firstname }}</p>
+    <p>Bonjour {{ app.user.nom }} dans votre compte <br>
+    C'est ici que vous pouvez gerer vos informations personnelles</p>
+    <hr>
+    - <a href="{{ path('app_modifications') }}">Mettre à jour votre mot de passe</a><br>
+    - <a href="{{ path('app_adresse') }}">Mettre à jour vos adresses de livraison</a>
 {% endblock %}
