--- a/templates/account/newadresse.html.twig
+++ b/templates/account/newadresse.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Ajouter une adresses de livraison{% endblock %}
 
 {% block body %}
-    <h1>Mes adresses</h1>
+    <h1>Nouvel adresse</h1>
     <a href="{{ path('app_compte') }}">Retour à mon compte</a>
     <hr>
     {{ form_start(form) }}
