--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -44,7 +44,7 @@
     <div class="text-right mb-5">
         <b>Nombre de produit :</b> {{ cart|length }}<br>
         <b>Total de mon panier : {{ total/100|number_format(2) }} €</b>
-        <a href="" class="btn btn-success btn-block mt-3">Valider mon panier</a>
+        <a href="{{ path('app_panier') }}" class="btn btn-success btn-block mt-3">Valider mon panier</a>
     </div>
     {% else %}
     <b>Votre panier est vide</b>
